# aki-mia.github.io

./: .gitignore  .gitmodules  README.md  _config.yml  archives.html  authors.html  categories.html  index.html  pelicanconf.py  privacy-policy-for-chrome-extention.html  pyproject.toml  tags.html
_includes/: page-footer.html  page-header.html
_layouts/: default.html
_posts/: 2023-01-19-privacy-policy-extension.markdown
author/: aki-mia.html
category/: extension.html  frontend.html
content/: 2023-01-19-privacy-policy-extension.markdown  privacy-policy-for-chrome-extention.html#privacy-policy-for-chrome-extention.md
feeds/: all.atom.xml  extension.atom.xml  frontend.atom.xml
output/: archives.html  authors.html  categories.html  index.html  privacy-policy-for-chrome-extensions-developed-by-aki-mia.html  privacy-policy-for-chrome-extention.html  tags.html
output/author/: aki-mia.html
output/category/: extension.html
output/tag/: chrome.html  extension.html
